--- a/scss/_filter_bars.scss
+++ b/scss/_filter_bars.scss
@@ -71,7 +71,12 @@ body.tmpl-index div.main {
 
   .js-stools-container-list .js-stools-field-list {
     margin-bottom: 0;
+    margin-left: 5px;
     margin-right: 0;
+
+    input[type='date'] {
+      padding: .35rem .5rem;
+    }
   }
 }
 
